--- a/LacertaEngine/LacertaEngine.vcxproj
+++ b/LacertaEngine/LacertaEngine.vcxproj
@@ -209,6 +209,7 @@
     <ClCompile Include="Source\RessourcesManager\Mesh\Mesh.cpp" />
     <ClCompile Include="Source\RessourcesManager\Resource.cpp" />
     <ClCompile Include="Source\RessourcesManager\ResourceManager.cpp" />
+    <ClCompile Include="Source\RessourcesManager\Texture\SkyBoxTexture.cpp" />
     <ClCompile Include="Source\RessourcesManager\Texture\Texture.cpp" />
     <ClCompile Include="Source\Window\Window.cpp" />
   </ItemGroup>
@@ -252,6 +253,7 @@
     <ClInclude Include="Source\RessourcesManager\Resource.h" />
     <ClInclude Include="Source\RessourcesManager\ResourceManager.h" />
     <ClInclude Include="Source\RessourcesManager\Resources.h" />
+    <ClInclude Include="Source\RessourcesManager\Texture\SkyBoxTexture.h" />
     <ClInclude Include="Source\RessourcesManager\Texture\Texture.h" />
     <ClInclude Include="Source\Utilities.h" />
     <ClInclude Include="Source\Window\Window.h" />
