Skybox & various improvements / fixes

--- a/LacertaEngine/LacertaEngine.vcxproj.filters
+++ b/LacertaEngine/LacertaEngine.vcxproj.filters
@@ -130,10 +130,16 @@
     <ClInclude Include="Source\RessourcesManager\Resources.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Source\RessourcesManager\Texture\DX11Texture.h">
+    <ClInclude Include="Source\RessourcesManager\Texture\Texture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Source\RessourcesManager\Texture\Texture.h">
+    <ClInclude Include="Source\ECS\Components\PointLightComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Rendering\Material.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\RessourcesManager\Texture\SkyBoxTexture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -207,11 +213,20 @@
     <ClCompile Include="Source\RessourcesManager\ResourceManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source\RessourcesManager\Texture\DX11Texture.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Source\RessourcesManager\Texture\Texture.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\ECS\Components\PointLightComponent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Rendering\Material.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\RessourcesManager\Texture\SkyBoxTexture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="Source\Rendering\Shaders\SkyBoxPixelShader.hlsl" />
   </ItemGroup>
 </Project>
