Skybox w/CubeMap WIP  (it looks like it's fine. it's not.)

--- a/LacertaEngine/LacertaEngine.vcxproj
+++ b/LacertaEngine/LacertaEngine.vcxproj
@@ -245,7 +245,7 @@
     <ClInclude Include="Source\Rendering\Shaders\ConstantBuffer.hlsli" />
     <AdditionalFiles Include="Source\Rendering\Shaders\MeshConstantBuffer.hlsli" />
     <AdditionalFiles Include="Source\Rendering\Shaders\MeshShadersLayouts.hlsli" />
-    <AdditionalFiles Include="Source\Rendering\Shaders\SkyBoxPixelShader.hlsl" />
+    <Content Include="Source\Rendering\Shaders\SkyBoxPixelShader.hlsl" />
     <ClInclude Include="Source\Rendering\WinDX11\WinDX11Drawcall.h" />
     <ClInclude Include="Source\Rendering\WinDX11\WinDX11Renderer.h" />
     <ClInclude Include="Source\Rendering\WinDX11\WinDX11RenderTarget.h" />
