--- a/LacertaEngine/LacertaEngine.vcxproj
+++ b/LacertaEngine/LacertaEngine.vcxproj
@@ -195,7 +195,9 @@
     <ClCompile Include="Source\Maths\MathUtilities.cpp" />
     <ClCompile Include="Source\Maths\Random.cpp" />
     <ClCompile Include="Source\Rendering\Drawcall.cpp" />
-    <ClCompile Include="Source\Rendering\GraphicsEngine.cpp" />
+    <ClCompile Include="Source\Rendering\Mesh.cpp" />
+    <ClCompile Include="Source\Rendering\RHI.cpp" />
+    <ClCompile Include="Source\Rendering\GraphicsResource.cpp" />
     <ClCompile Include="Source\Rendering\Material.cpp" />
     <ClCompile Include="Source\Rendering\Renderer.cpp" />
     <ClCompile Include="Source\Rendering\RenderTarget.cpp" />
@@ -204,14 +206,13 @@
     <AdditionalFiles Include="Source\Rendering\Shaders\MeshPixelShader.hlsl" />
     <AdditionalFiles Include="Source\Rendering\Shaders\MeshPBRPixelShader.hlsl" />
     <Content Include="Source\Rendering\Shaders\SkyBoxVertexShader.hlsl" />
+    <ClCompile Include="Source\Rendering\Texture.cpp" />
     <ClCompile Include="Source\Rendering\WinDX11\WinDX11Drawcall.cpp" />
+    <ClCompile Include="Source\Rendering\WinDX11\WinDX11Mesh.cpp" />
     <ClCompile Include="Source\Rendering\WinDX11\WinDX11Renderer.cpp" />
     <ClCompile Include="Source\Rendering\WinDX11\WinDX11RenderTarget.cpp" />
     <ClCompile Include="Source\Rendering\WinDX11\WinDX11Shader.cpp" />
-    <ClCompile Include="Source\RessourcesManager\Mesh\Mesh.cpp" />
-    <ClCompile Include="Source\RessourcesManager\Resource.cpp" />
-    <ClCompile Include="Source\RessourcesManager\ResourceManager.cpp" />
-    <ClCompile Include="Source\RessourcesManager\Texture\Texture.cpp" />
+    <ClCompile Include="Source\Rendering\WinDX11\WinDX11Texture.cpp" />
     <ClCompile Include="Source\Window\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -239,7 +240,9 @@
     <ClInclude Include="Source\Maths\Vector2.h" />
     <ClInclude Include="Source\Maths\Vector3.h" />
     <ClInclude Include="Source\Rendering\Drawcall.h" />
-    <ClInclude Include="Source\Rendering\GraphicsEngine.h" />
+    <ClInclude Include="Source\Rendering\Mesh.h" />
+    <ClInclude Include="Source\Rendering\RHI.h" />
+    <ClInclude Include="Source\Rendering\GraphicsResource.h" />
     <ClInclude Include="Source\Rendering\Material.h" />
     <ClInclude Include="Source\Rendering\Renderer.h" />
     <ClInclude Include="Source\Rendering\RenderTarget.h" />
@@ -248,15 +251,13 @@
     <AdditionalFiles Include="Source\Rendering\Shaders\MeshConstantBuffer.hlsli" />
     <AdditionalFiles Include="Source\Rendering\Shaders\MeshShadersLayouts.hlsli" />
     <Content Include="Source\Rendering\Shaders\SkyBoxPixelShader.hlsl" />
+    <ClInclude Include="Source\Rendering\Texture.h" />
     <ClInclude Include="Source\Rendering\WinDX11\WinDX11Drawcall.h" />
+    <ClInclude Include="Source\Rendering\WinDX11\WinDX11Mesh.h" />
     <ClInclude Include="Source\Rendering\WinDX11\WinDX11Renderer.h" />
     <ClInclude Include="Source\Rendering\WinDX11\WinDX11RenderTarget.h" />
     <ClInclude Include="Source\Rendering\WinDX11\WinDX11Shader.h" />
-    <ClInclude Include="Source\RessourcesManager\Mesh\Mesh.h" />
-    <ClInclude Include="Source\RessourcesManager\Resource.h" />
-    <ClInclude Include="Source\RessourcesManager\ResourceManager.h" />
-    <ClInclude Include="Source\RessourcesManager\Resources.h" />
-    <ClInclude Include="Source\RessourcesManager\Texture\Texture.h" />
+    <ClInclude Include="Source\Rendering\WinDX11\WinDX11Texture.h" />
     <ClInclude Include="Source\Utilities.h" />
     <ClInclude Include="Source\Window\Window.h" />
   </ItemGroup>
