--- a/LacertaEngine/LacertaEngine.vcxproj
+++ b/LacertaEngine/LacertaEngine.vcxproj
@@ -109,6 +109,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <AdditionalFiles Include="Source\Rendering\Shaders\SkyBoxShaderLayouts.hlsli" />
     <ClCompile Include="Source\ECS\Component.cpp" />
     <ClCompile Include="Source\ECS\Components\MeshComponent.cpp" />
     <ClCompile Include="Source\ECS\Components\PointLightComponent.cpp" />
@@ -257,6 +258,7 @@
     <ClInclude Include="Source\Rendering\Shader.h" />
     <AdditionalFiles Include="Source\Rendering\Shaders\SceneMeshShaderLayouts.hlsli" />
     <Content Include="Source\Rendering\Shaders\SkyBoxPixelShader.hlsl" />
+    <ClInclude Include="Source\Rendering\SkyBoxPassLayouts.h" />
     <ClInclude Include="Source\Rendering\Texture.h" />
     <ClInclude Include="Source\Rendering\WinDX11\WinDX11Mesh.h" />
     <ClInclude Include="Source\Rendering\WinDX11\WinDX11Renderer.h" />
