WIP directional light shadow mapping

--- a/LacertaEngineEditor/imgui.ini
+++ b/LacertaEngineEditor/imgui.ini
@@ -49,13 +49,13 @@ Collapsed=0
 Pos=0,19
 Size=1479,978
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000001,0
 
 [Window][Viewport]
 Pos=0,19
-Size=1328,554
+Size=1328,970
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000001,0
 
 [Window][Global Settings]
 Pos=1330,78
@@ -70,16 +70,14 @@ Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Texture Viewer]
-Pos=0,575
-Size=1328,414
+Pos=0,19
+Size=1328,970
 Collapsed=0
-DockId=0x0000000C,0
+DockId=0x00000001,1
 
 [Docking][Data]
 DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1900,970 Split=X Selected=0x2AFBC908
-  DockNode        ID=0x00000001 Parent=0x3BC79352 SizeRef=1968,978 Split=Y Selected=0x13926F0B
-    DockNode      ID=0x0000000B Parent=0x00000001 SizeRef=1328,554 CentralNode=1 Selected=0x13926F0B
-    DockNode      ID=0x0000000C Parent=0x00000001 SizeRef=1328,414 Selected=0x5B2DE888
+  DockNode        ID=0x00000001 Parent=0x3BC79352 SizeRef=1968,978 CentralNode=1 Selected=0x5B2DE888
   DockNode        ID=0x00000002 Parent=0x3BC79352 SizeRef=570,978 Split=Y Selected=0xFB7927A1
     DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=419,357 Split=Y Selected=0x97059648
       DockNode    ID=0x00000005 Parent=0x00000003 SizeRef=419,83 Split=Y Selected=0x2AFBC908
