--- a/LacertaEngineEditor/imgui.ini
+++ b/LacertaEngineEditor/imgui.ini
@@ -27,7 +27,7 @@ Collapsed=0
 
 [Window][SceneHierarchy]
 Pos=1233,378
-Size=667,278
+Size=667,269
 Collapsed=0
 DockId=0x00000009,0
 
@@ -64,16 +64,16 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Details]
-Pos=1233,658
-Size=667,331
+Pos=1233,649
+Size=667,340
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Texture Viewer]
-Pos=0,19
-Size=1231,970
+Pos=1233,649
+Size=667,340
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x0000000A,1
 
 [Docking][Data]
 DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1900,970 Split=X Selected=0x2AFBC908
@@ -85,6 +85,6 @@ DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,19 Size=1900,970 Split=X
         DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=369,298 Selected=0xECBEECBF
       DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=419,116 Selected=0x97059648
     DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=419,611 Split=Y Selected=0xFB7927A1
-      DockNode    ID=0x00000009 Parent=0x00000004 SizeRef=369,278 Selected=0xFB7927A1
-      DockNode    ID=0x0000000A Parent=0x00000004 SizeRef=369,331 Selected=0xFC3EA205
+      DockNode    ID=0x00000009 Parent=0x00000004 SizeRef=369,269 Selected=0xFB7927A1
+      DockNode    ID=0x0000000A Parent=0x00000004 SizeRef=369,340 Selected=0xFC3EA205
 
