D3D12 support wip : Initialize Device

--- a/LacertaEngine/LacertaEngine.vcxproj.filters
+++ b/LacertaEngine/LacertaEngine.vcxproj.filters
@@ -159,6 +159,9 @@
     <ClInclude Include="Source\Rendering\WinDX11\WinDX11Texture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Rendering\WinDX12\WinDX12Renderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Logger\Logger.cpp">
@@ -252,6 +255,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Source\Rendering\WinDX11\WinDX11Texture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Rendering\WinDX12\WinDX12Renderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
