--- a/LacertaEngine/LacertaEngine.vcxproj
+++ b/LacertaEngine/LacertaEngine.vcxproj
@@ -222,6 +222,7 @@
     <ClCompile Include="Source\Rendering\WinDX11\WinDX11RenderTarget.cpp" />
     <ClCompile Include="Source\Rendering\WinDX11\WinDX11Shader.cpp" />
     <ClCompile Include="Source\Rendering\WinDX11\WinDX11Texture.cpp" />
+    <ClCompile Include="Source\Rendering\WinDX12\WinDX12CommandQueue.cpp" />
     <ClCompile Include="Source\Rendering\WinDX12\WinDX12Renderer.cpp" />
     <ClCompile Include="Source\Window\Window.cpp" />
   </ItemGroup>
@@ -272,6 +273,7 @@
     <ClInclude Include="Source\Rendering\WinDX11\WinDX11RenderTarget.h" />
     <ClInclude Include="Source\Rendering\WinDX11\WinDX11Shader.h" />
     <ClInclude Include="Source\Rendering\WinDX11\WinDX11Texture.h" />
+    <ClInclude Include="Source\Rendering\WinDX12\WinDX12CommandQueue.h" />
     <ClInclude Include="Source\Rendering\WinDX12\WinDX12Renderer.h" />
     <ClInclude Include="Source\Utilities.h" />
     <ClInclude Include="Source\Window\Window.h" />
